--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Oswald|Alegreya+Sans" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <title>Shop whoopj</title>
+    <title>Shopping</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
